--- a/analysis/embedding_visualizer.html
+++ b/analysis/embedding_visualizer.html
@@ -270,7 +270,21 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:8000';
+        // Determine API base URL dynamically
+        function getAPIBase() {
+            // 1. Check for ?api_base=... in the URL
+            const params = new URLSearchParams(window.location.search);
+            if (params.has('api_base')) {
+                return params.get('api_base');
+            }
+            // 2. Use window.location.hostname to guess
+            if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
+                return 'http://localhost:8000';
+            }
+            // 3. Use a default production backend (update as needed)
+            return 'https://moviematch-ca4v.onrender.com';
+        }
+        const API_BASE = getAPIBase();
         
         async function loadVisualization() {
             const method = document.getElementById('method').value;
@@ -305,7 +319,7 @@
                     <div class="error">
                         <h3>Error Loading Data</h3>
                         <p>${error.message}</p>
-                        <p>Make sure the backend server is running on <code>localhost:8000</code></p>
+                        <p>Make sure the backend server is running and the API_BASE is correct: <code>${API_BASE}</code></p>
                     </div>
                 `;
             }
